mdapi_output_dir/objects/Supplier__c.object
<CustomObject>
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    <label>Supplier</label>
    
    <nameField>
        
        <label>Supplier Name</label>
        
        
        <type>Text</type>
        
    </nameField>
    
    <pluralLabel>Suppliers</pluralLabel>
    
    
    <sharingModel>ReadWrite</sharingModel>
    
    
<fields>
        
    <fullName>City__c</fullName>
        
        
    <label>City</label>
        
    <length>40</length>
        
        
        
        
    <type>Text</type>
        
        
</fields>
    <fields>
        
    <fullName>Email__c</fullName>
        
    <caseSensitive>true</caseSensitive>
        
        
    <label>Email</label>
        
        
        
        
    <type>Email</type>
        
    <unique>true</unique>
        
</fields>
    <fields>
        
    <fullName>Phone__c</fullName>
        
        
    <label>Phone</label>
        
        
        
        
    <type>Phone</type>
        
</fields>
    <fields>
        
    <fullName>State__c</fullName>
        
    <description>Use state&apos;s initials i.e. GA-Georgia</description>
        
        
    <label>State</label>
        
    <length>2</length>
        
        
        
        
    <type>Text</type>
        
        
</fields>
    <fields>
        
    <fullName>Street_Address__c</fullName>
        
        
    <label>Street Address</label>
        
    <length>40</length>
        
        
        
        
    <type>Text</type>
        
        
</fields>
    <fields>
        
    <fullName>Zip__c</fullName>
        
        
    <label>Zip</label>
        
    <length>10</length>
        
        
        
        
    <type>Text</type>
        
        
</fields>
    <listViews>
        
    <fullName>All</fullName>
        
    <filterScope>Everything</filterScope>
        
    <label>All</label>
        
</listViews>
</CustomObject>